# riscv_compiler

./: .gitignore  AMNESIA_HANDOFF_95_PERCENT.md  AMNESIA_HANDOFF_COMPLETE.md  API_DOCUMENTATION.md  BENCHMARKING_GUIDE.md  CLAUDE.md  CLAUDE_HANDOFF.md  CMakeLists.txt  DEVELOPER_EXPERIENCE.md  FINAL_PERFORMANCE_REPORT.md  HANDOFF_NOTES.md  LICENSE  MEMORY_CONSTRAINTS_GUIDE.md  NEXT_CLAUDE_START_HERE.md  OPTIMIZATION_DOCUMENTATION.md  OPTIMIZATION_SUMMARY.md  PERFORMANCE_ANALYSIS.md  PERFORMANCE_IMPROVEMENTS.md  PROJECT_SUMMARY.md  README.md  SECURITY_DOCUMENTATION.md  START_HERE.md  TEST_RESULTS_DOCUMENTATION.md  TROUBLESHOOTING_GUIDE.md  USAGE_EXAMPLES.md  compile_to_circuit.sh  git_setup.sh  run_all_tests.sh  verify_release.sh
cmake/: riscv_compilerConfig.cmake.in
docs/: COMPLETE_SYSTEM_OVERVIEW.md  FORMAL_VERIFICATION_COMPLETE.md  HANDOFF_README.md  SAT_VERIFICATION_GUIDE.md  VERIFICATION_SUMMARY.md
examples/: DUAL_PATH_MEASUREMENTS.md  DUAL_PATH_SUMMARY.md  basefold_circuit_test  bitcoin_block_verify.c  bitcoin_merkle_verify.c  bitcoin_verify_riscv.c  blockchain_circuits_summary.md  compare_compilation_paths.c  complete_equivalence_prover.c  comprehensive_optimization_test.c  demonstrate_formal_verification.sh  dual_path_demonstration.c  dual_path_equivalence_proof.c  efficient_sum.c  ethereum_keccak256.c  ethereum_rlp_decode.c  fibonacci.s  fibonacci_riscv.c  fibonacci_zkvm_demo.c  full_riscv_demo.c  getting_started.c  link.ld  memory_aware_example.c  memory_comparison.c  memory_demo.c  memory_ultra_comparison.c  optimized_arithmetic_demo.c  proof_of_code_binding.c  sha3_riscv.c  simple.s  simple_riscv.c  test_bitcoin_verify.c  tutorial_complete.c  zkvm_sha256.c
include/: formal_verification.h  riscv_compiler.h  riscv_elf_loader.h  riscv_memory.h  zkvm.h
scripts/: add_license_headers.sh  build.sh  compile_to_circuit.sh  git_setup.sh  prepare_repository.sh  run_all_tests.sh  test.sh  verify_release.sh
src/: arithmetic_gates.c  booth_multiplier.c  booth_multiplier_optimized.c  booth_multiplier_simple.c  booth_radix4.c  circuit_format_converter.c  create_test_elf.c  gate_cache.c  gate_deduplication.c  instruction_fusion.c  kogge_stone_adder.c  memory_constraints.c  minisat_integration_test.c  optimized_branches.c  optimized_shifts.c  parallel_compiler.c  reference_branches.c  reference_implementations.c  reference_memory.c  riscv_branches.c  riscv_compiler.c  riscv_compiler_optimized.c  riscv_divide.c  riscv_elf_loader.c  riscv_jumps.c  riscv_loadstore.c  riscv_memory.c  riscv_memory_simple.c  riscv_memory_ultra_simple.c  riscv_multiply.c  riscv_shifts.c  riscv_system.c  riscv_upper_immediate.c  riscv_zkvm_pipeline.c  sha3_circuit.c  sha3_reference.c  sha3_simple_test.c  test_add_equivalence.c  test_instruction_verification.c  test_verification_api.c
src/minisat/: main.c  solver.c  solver.h  vec.h
tests/: benchmark_comprehensive.c  benchmark_instructions.c  benchmark_optimizations.c  benchmark_simple.c  riscv_emulator.c  riscv_emulator.h  test_arithmetic.c  test_comprehensive.c  test_differential.c  test_differential_programs.c  test_edge_cases.c  test_framework.h  test_programs.c  test_programs.h  test_reference_impl.c  test_sha3.c
